# gmine-rust-miner

./: .gitignore  Cargo.toml  Dockerfile  MINING_FIX_STATUS.md  ORCHESTRATOR_FIX_V3.4.md  README.md  SIMPLE_TEST.md  TEST_INSTRUCTIONS.md  V3.3_INTEGRATION_SUMMARY.md  V3.4_UPDATE.md  V3.5_UPDATE.md  build.rs  demo-new-experience.sh  install.sh  mine-rust.sh  mine.sh  test-enhanced-installer.sh  test-one-liner.sh  test-real-install.sh  verify-install.sh
.github/workflows/: release.yml
bridge/: .env.example  .gitignore  README.md  package-lock.json  package.json  test-eip712-nodejs.js  test_bridge.sh
bridge/src/: index.ts
gmine_mobile_lib/: Cargo.toml  build.gradle
gmine_mobile_lib/.cargo/: config.toml
gmine_mobile_lib/src/: EIP712_CONSOLIDATION.md  blockchain.rs  blockchain_client.rs  blockchain_direct.rs  blockchain_hybrid.rs  eip712.rs  jni_bridge.rs  lib.rs  lib_complex.rs  lib_mock.rs  mining.rs  mining_core.rs  mobile_tx_builder.rs  mobile_wallet.rs  msg_execute_contract_compat.rs  real_mining.rs  state_persistence.rs  telemetry.rs  test_eip712.rs  test_proto_debug.rs  test_real_account.rs  test_transaction.rs  test_transaction_debug.rs  test_tx_proto.rs  thermal.rs  transaction.rs  tx_proto.rs  types.rs  wallet.rs  wasmx.rs  web3_extension.rs
gmine_mobile_lib/src/archive_eip712/: eip712_manual.rs  eip712_proper.rs
gmine_mobile_lib/src/chain/: bridge_client.rs  contracts.rs  embedded_bridge.rs  mod.rs
gmine_mobile_lib/src/mining/: nonce_partition.rs
proto/cosmos/auth/v1beta1/: auth_simple.proto  query.proto
proto/cosmos/bank/v1beta1/: query.proto
proto/cosmos/base/tendermint/v1beta1/: service.proto
proto/cosmos/base/v1beta1/: coin_simple.proto
proto/cosmos/tx/v1beta1/: service.proto  tx_simple.proto
proto/cosmos/vesting/v1beta1/: vesting.proto
proto/cosmwasm/wasm/v1/: query.proto  tx_simple.proto
proto/injective/crypto/v1beta1/ethsecp256k1/: keys.proto
proto/injective/types/v1beta1/: account.proto
src/: bridge_manager.rs  lib.rs  main.rs  orchestrator_mod.rs
src/chain/: account_types.rs  bridge_client.rs  client_real.rs  mod.rs  proto.rs  queries.rs  rust_signer.rs  tx_builder.rs
src/chain/client/: mod.rs
src/chain/messages/: advance.rs  claim.rs  commit.rs  commit_test.rs  finalize.rs  mod.rs  reveal.rs  stake.rs  unstake.rs
src/chain/wallet/: keys.rs  mod.rs  signer.rs
src/config/: mod.rs
src/miner/: engine.rs  mining_adapter.rs  mod.rs  solution.rs  worker.rs
src/orchestrator/: epoch_monitor.rs  mod.rs  stats.rs  transaction_manager.rs
src/telemetry/: collector.rs  enhanced_reporter.rs  mod.rs  reporter.rs  simple_reporter.rs  types.rs
